--- a/F1 - March, 23/index.html
+++ b/F1 - March, 23/index.html
@@ -6,7 +6,7 @@
     <title>Index</title>
 </head>
 <body>
-    <h1><center>Tiwari</center></h1>
+    <h1><center>Anurag Tiwari</center></h1>
 
     <b>1 both in F1 & Acciojob, 1.jpg</b> <br>
     simple <br>
