--- a/F1 - March, 23/index.html
+++ b/F1 - March, 23/index.html
@@ -8,21 +8,25 @@
 <body>
     <h1><center>Image Source</center></h1>
 
-    <b>1 both in F1 & Acciojob, 1.jpg</b> <br>
-    simple <br>
-    <img src="1.jpg" alt="simple"> <br>
+    <b>F1 > 1(direct) + html || Acciojob > F1 > 1(direct) + html || 1.jpg</b> <br>
+    direct reach <br>
+    <img src="1.jpg" alt="direct reach"> <br>
+    <!-- ------------------------------------------------------------- -->
 
-    <b>2 both in F1 & Acciojob, ./2.png</b> <br>
-    relative current path to current folder F1 where photo in current folder F1<br>
-    <img src="./2.png" alt="relative current path"> <br>
+    <b>F1(source) > 2 + html || Acciojob > F1(source) > 2 + html || ./2.png</b> <br>
+    relative path start from current folder F1 where photo also present in current folder F1<br>
+    <img src="./2.png" alt="relative path start from current folder F1 where photo also present in current folder F1"> <br>
+    <!-- ------------------------------------------------------------- -->
 
-    <b>3 in Acciojob, ../F1 - March, 23/3.png</b> <br>
-    relative parent path to current folder F1 where photo in current folder <br>
-    <img src="../F1 - March, 23/3.png" alt="relative current path to parent folder F1"> <br>
+    <b>Acciojob(source) > F1 > 3 + html || ../F1/3.png</b> <br>
+    relative path start from parent folder Acciojob where photo present in current folder F1<br>
+    <img src="../F1 - March, 23/3.png" alt="relative path start from parent folder Acciojob where photo present in current folder F1"> <br>
+    <!-- ------------------------------------------------------------- -->
 
-    <b>4 in F1</b> <br>
-    relative parent path to current folder F1 where photo in current folder <br>
-    <img src="../4.png" alt="relative current path to parent folder F1"> <br>
+    <b>F1(source) > 4 + html || ../4.png</b> <br>
+    relative path start from parent i.e., current folder F1 where photo also present in current folder F1<br>
+    <img src="../4.png" alt="relative path start from parent i.e., current folder F1 where photo also present in current folder F1"> <br>
+    <!-- ------------------------------------------------------------- -->
 
     <b>5</b> <br>
     relative current path to parent folder Acciojob where photo in parent folder <br>
