image path example

--- a/F1 - March, 23/index.html
+++ b/F1 - March, 23/index.html
@@ -9,69 +9,69 @@
     <h1><center>Image Source</center></h1> <br>
 
     <b>F1 > 1(direct) + html || Acciojob > F1 > 1(direct) + html || 1.jpg</b> <br>
-    direct reach <br>
-    <img src="1.jpg" alt="direct reach"> <br> <br>
+    Direct reach <br>
+    <img src="1.jpg" alt="Direct reach"> <br> <br>
     <!-- ------------------------------------------------------------- -->
 
     <b>F1(source) > 2 , html || Acciojob > F1(source) > 2 , html || ./2.png</b> <br>
-    relative path start from current folder F1 where photo also present in current folder F1<br>
-    <img src="./2.png" alt="relative path start from current folder F1 where photo also present in current folder F1"> <br> <br>
+    Relative path start from current folder F1 where photo also present in current folder F1<br>
+    <img src="./2.png" alt="Relative path start from current folder F1 where photo also present in current folder F1"> <br> <br>
     <!-- ------------------------------------------------------------- -->
 
     <b>Acciojob(source) > F1 > 3 , html || ../F1/3.png</b> <br>
-    relative path start from parent folder Acciojob where photo present in current folder F1<br>
-    <img src="../F1 - March, 23/3.png" alt="relative path start from parent folder Acciojob where photo present in current folder F1"> <br> <br>
+    Relative path start from parent folder Acciojob where photo present in current folder F1<br>
+    <img src="../F1 - March, 23/3.png" alt="Relative path start from parent folder Acciojob where photo present in current folder F1"> <br> <br>
     <!-- ------------------------------------------------------------- -->
 
     <b>F1(source) > 4 , html || ../4.png</b> <br>
-    relative path start from parent i.e., current folder F1 where photo also present in current folder F1<br>
-    <img src="../4.png" alt="relative path start from parent i.e., current folder F1 where photo also present in current folder F1"> <br> <br>
+    Relative path start from parent i.e., current folder F1 where photo also present in current folder F1<br>
+    <img src="../4.png" alt="Relative path start from parent i.e., current folder F1 where photo also present in current folder F1"> <br> <br>
     <!-- ------------------------------------------------------------- -->
 
     <b>5</b> <br>
     <b>5 , F1(source don't have photo, it is outside) > html || Acciojob > 5 , F1(source don't have photo, it is outside) > html || ./5.jpg</b> <br>
-    relative path start from current folder F1 where photo is present outside the current folder <br>
-    <img src="./5.jpg" alt="relative path start from current folder F1 where photo is present outside the current folder"> <br> <br>
+    Relative path start from current folder F1 where photo is present outside the current folder <br>
+    <img src="./5.jpg" alt="Relative path start from current folder F1 where photo is present outside the current folder"> <br> <br>
     <!-- ------------------------------------------------------------- -->
 
     <b>Acciojob(source) > 6 , F1 > html || ../6.png</b> <br>
-    relative path start from parent folder Acciojob where photo is also present in parent folder Acciojob while html is present in the current folder that is F1<br>
-    <img src="../6.png" alt="relative path start from parent folder Acciojob where photo is also present in parent folder Acciojob while html is present in the current folder that is F1"> <br> <br>
+    Relative path start from parent folder Acciojob where photo is also present in parent folder Acciojob while html is present in the current folder that is F1<br>
+    <img src="../6.png" alt="Relative path start from parent folder Acciojob where photo is also present in parent folder Acciojob while html is present in the current folder that is F1"> <br> <br>
     <!-- ------------------------------------------------------------- -->
 
     <b>Image( > 7) , F1(source don't have 7)( > html) || Acciojob > Image( > 7) , F1(source don't have 7)( > html) || ./7.png</b> <br>
-    relative path start from current folder F1 where photo is present in another folder i.e., Image <br>
-    <img src="./7.png" alt="relative path start from current folder F1 where photo is present in another folder i.e., Image"> <br> <br>
+    Relative path start from current folder F1 where photo is present in another folder i.e., Image <br>
+    <img src="./7.png" alt="Relative path start from current folder F1 where photo is present in another folder i.e., Image"> <br> <br>
     <!-- ------------------------------------------------------------- -->
    
     <b>Acciojob(source) > Image( > 8) , F1( > html) || ../Image/8.jpg</b> <br>
-    relative path start from parent folder Acciojob where photo is present in another folder i.e., Image while html is present in current folder F1 <br>
-    <img src="../Image/8.jpg" alt="relative path start from parent folder Acciojob where photo is present in Image folder while html is present in current folder F1"> <br> <br>
+    Relative path start from parent folder Acciojob where photo is present in another folder i.e., Image while html is present in current folder F1 <br>
+    <img src="../Image/8.jpg" alt="Relative path start from parent folder Acciojob where photo is present in Image folder while html is present in current folder F1"> <br> <br>
     <!-- ------------------------------------------------------------- -->
 
     <b>Image( > 9) , F1(source don't have 9)( > html) || Acciojob(source have 9 but inside the folder so it can't reach directly) > Image( > 9) , F1( > html) || ../9.png</b> <br>
-    relative path start from parent folder Acciojob where photo is present in another folder i.e., Image so it can't access directly. <br>
+    Relative path start from parent folder Acciojob where photo is present in another folder i.e., Image so it can't access directly. <br>
     same with F1 parent folder, photo is present in another folder i.e., Image <br>
-    <img src="../9.png" alt="relative path start from parent folder Acciojob where photo is present in another folder i.e., Image so it can't access directly. Same with F1 parent folder, photo is present in another folder i.e., Image"> <br> <br>
+    <img src="../9.png" alt="Relative path start from parent folder Acciojob where photo is present in another folder i.e., Image so it can't access directly. Same with F1 parent folder, photo is present in another folder i.e., Image"> <br> <br>
     <!-- ------------------------------------------------------------- -->
 
     <b>Acciojob > F1(source don't have direct access) > html , img > 10 || F1(source don't have direct access) > html , img > 10 || ./10.jpg</b> <br>
-    relative path start from current folder F1 where photo is present in img folder that is present inside the F1<br>
-    <img src="./10.jpg" alt="relative path start from current folder F1 where photo is present in img folder that is present inside the F1"> <br> <br>
+    Relative path start from current folder F1 where photo is present in img folder that is present inside the F1<br>
+    <img src="./10.jpg" alt="Relative path start from current folder F1 where photo is present in img folder that is present inside the F1"> <br> <br>
     <!-- ------------------------------------------------------------- -->
   
     <b>Acciojob(source don't have direct access) > F1 > html , img > 11 || F1(source don't have direct access) > html , img > 11 || ../11.jpg</b> <br>
-    relative path start from current folder either Acciojob or F1 where photo is present in img folder that is present inside the F1<br>
-    <img src="../11.jpg" alt="relative path start from current folder either Acciojob or F1 where photo is present in img folder that is present inside the F1"> <br> <br>
+    Relative path start from current folder either Acciojob or F1 where photo is present in img folder that is present inside the F1<br>
+    <img src="../11.jpg" alt="Relative path start from current folder either Acciojob or F1 where photo is present in img folder that is present inside the F1"> <br> <br>
     <!-- ------------------------------------------------------------- -->
     
     <b>Acciojob(source) > F1 > html , img > 12 || ../F1/img/12.jpg</b> <br>
-    relative path start from parent folder Acciojob where photo is present in img folder that is present inside the F1<br>
-    <img src="../F1 - March, 23/img/12.jpg" alt="relative path start from parent folder Acciojob where photo is present in img folder that is present inside the F1"> <br> <br>
+    Relative path start from parent folder Acciojob where photo is present in img folder that is present inside the F1<br>
+    <img src="../F1 - March, 23/img/12.jpg" alt="Relative path start from parent folder Acciojob where photo is present in img folder that is present inside the F1"> <br> <br>
     <!-- ------------------------------------------------------------- -->
 
     <b>Acciojob > F1(source) > html , img > 10 || F1(source) > html , img > 10 || ./img/10.jpg</b> <br>
-    relative path start from current folder F1 where photo is present in img folder that is present inside the F1<br>
-    <img src="./img/10.jpg" alt="relative path start from current folder F1 where photo is present in img folder that is present inside the F1"> <br> <br>
+    Relative path start from current folder F1 where photo is present in img folder that is present inside the F1<br>
+    <img src="./img/10.jpg" alt="Relative path start from current folder F1 where photo is present in img folder that is present inside the F1"> <br> <br>
 </body>
 </html>
