1st class codes

--- a/F1 - March, 23/index.html
+++ b/F1 - March, 23/index.html
@@ -6,7 +6,8 @@
     <title>Index</title>
 </head>
 <body>
-    <h1><center>Image Source</center></h1> <br>
+    <h1><b><u><center>1ST NOTES</center></u></b></h1>
+    <h2>Image Source</h2> <br>
 
     <b>F1 > 1(direct) + html || Acciojob > F1 > 1(direct) + html || 1.jpg</b> <br>
     Direct reach <br>
