image video audio

--- a/F1 - March, 23/2nd_class/index.html
+++ b/F1 - March, 23/2nd_class/index.html
@@ -8,5 +8,26 @@
 <body>
     <h1><b><u><center>2ND NOTES</center></u></b></h1>
 
+    <h2>Relative Path</h2>
+    <img src="../../F1 - March, 23/1st_class/1.jpg" alt="move upward" height="150" width="150">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src=".././././5.jpg" alt="stay in current"height="150" width="150">
+    <!-- ------------------------------------------------------------- -->
+
+    <h2>Adding Video</h2>
+    <video src="./v1.mp4" controls autoplay loop muted height="200"></video>
+    <!-- ------------------------------------------------------------- -->
+
+    <h2>Adding Audio</h2>
+    <audio src="./a1.mp3" controls autoplay loop muted></audio>
+    <audio src="./a2.ogg" controls autoplay loop muted></audio>
+    <audio controls autoplay muted>
+        <source src="./a1.mp3" type="audio/mpeg">
+    </audio>
+    <audio controls autoplay muted>
+        <source src="" type="audio/ogg">
+        <source src="" type="audio/mpeg">
+        aa gaya samajh me
+    </audio>
 </body>
 </html>
