iframe & youtube done

--- a/F1 - March, 23/2nd_class/index.html
+++ b/F1 - March, 23/2nd_class/index.html
@@ -32,5 +32,17 @@
     <!-- ------------------------------------------------------------- -->
 
     <h2>Adding Iframe</h2>
+    <iframe src="../1st_class/index.html" frameborder="0" width="400" height="200"></iframe>
+    <h2>Trying Loop</h2>
+    <iframe src="./index.html" frameborder="-11" width="400" height="200"></iframe>
+    <br>
+    <h2>Inside of Frame</h2>
+    <iframe src="./ind.html" frameborder="-11" width="800" height="300"></iframe>
+    <!-- ------------------------------------------------------------- -->
+
+    <h2>Adding Youtube</h2>
+    <iframe src="https://www.youtube.com/embed/qtKD5BkHhDU?si=FINmcesEsUhv2oxp" frameborder="1"></iframe>
+    <iframe src="https://www.youtube.com/embed/qtKD5BkHhDU" frameborder="1"></iframe>
+
 </body>
 </html>
