--- a/F1 - March, 23/2nd_class/index.html
+++ b/F1 - March, 23/2nd_class/index.html
@@ -42,6 +42,7 @@
 
     <h2>Adding Youtube</h2>
     <iframe src="https://www.youtube.com/embed/qtKD5BkHhDU?si=FINmcesEsUhv2oxp" frameborder="1"></iframe>
-    <iframe src="https://www.youtube.com/embed/qtKD5BkHhDU" frameborder="1"></iframe>
+    <iframe src="https://www.youtube.com/embed/qtKD5BkHhDU" frameborder="1"></iframe> <br>
+    <a href="https://youtu.be/JSLHveDmdjY?si=DYgqJzrueWBbHDSb">Youtube direct link</a>
 </body>
 </html>
