--- a/F1 - March, 23/1st_class/index.html
+++ b/F1 - March, 23/1st_class/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1><b><u><center>sitaram</center></u></b></h1>
     <h1><b><u><center>1ST NOTES</center></u></b></h1>
-    <h2>Image Source</h2> <br>
+    <h2>Image Source</h2>
 
     <b>1st_class > 1(direct) + html || F1 > 1st_class > 1(direct) + html || 1.jpg</b> <br>
     Direct reach <br>
