--- a/F1 - March, 23/3rd_contest/index.html
+++ b/F1 - March, 23/3rd_contest/index.html
@@ -6,45 +6,52 @@
     <title>3RD NOTES</title>
 </head>
 <body>
-    <header><h1><b><u><center>3RD NOTES</center></u></b></h1></header>
+    <header>
+        <h1><b><u><center>sitaram</center></u></b></h1>
+        <h1><b><u><center>3RD NOTES</center></u></b></h1>
+    </header>
+    -----------------------------------------------------------------------
+    <br>
+    <!-- -------------------------------------------------------------- -->
 
     <main>
         <h2>List</h2>
-        Ordered List
+        <h4>Ordered List</h4>
         <ol type="A" reversed start="3">
             <li></li>
             <li></li>
         </ol>
-        -----------------------------------------------------------------
-        <!-- -------------------------------------------------------- -->
+        -----------------------------------------------
+        <!-- ---------------------------------------------------------- -->
 
-        <ul>Unordered List
+        <ul><h4>Unordered List</h4>
             <li><ul type="circle">
                 <li></li>
                 <li></li>
             </ul></li>
+            <li><ul type="none">
+                <li>none</li>
+                <li>points</li>
+            </ul></li>
         </ul>
-        -----------------------------------------------------------------
-        <!-- -------------------------------------------------------- -->
+        -----------------------------------------------
+        <!-- ---------------------------------------------------------- -->
 
-        <dl>Description List
-            <li></li>
+        <dl><h4>Description List</h4>
             <dt>Topic</dt>
             <dd>We all need to define the topic</dd>
-            <li></li>
         </dl>
-        -----------------------------------------------------------------
-        <!-- -------------------------------------------------------- -->
+        -------------------------------------------------------------------
+        <!-- ---------------------------------------------------------- -->
 
-        <li></li>
         <h2>Blockquote</h2>
-        <blockquote cite="https://google.com">It is for the quotes.
+        <blockquote cite="https://google.com">
             <li>It is under the list.</li>
             <p>Now it is in para</p>
         </blockquote>
         <p>That is the difference between the para and the blockquote</p>
-        -----------------------------------------------------------------
-        <!-- -------------------------------------------------------- -->
+        -------------------------------------------------------------------
+        <!-- ---------------------------------------------------------- -->
 
         <div>division</div>section
         <section>section</section>division
@@ -54,8 +61,14 @@
         </pre>
         <a href="phone:9452232937">call me</a> <br>
         <a href="mailto:kfatnuragiv@gmail.com">mail me</a>
-    </main>
+    </main><br>
+    -----------------------------------------------------------------------
+    <br> <br>
+    <!-- -------------------------------------------------------------- -->
 
-    <footer>&copy;</footer>
+    <footer><center>
+        &copy; Copyright
+        <h3><u>END</u></h3></center>
+    </footer>
 </body>
 </html>
