--- a/F1 - March, 23/3rd_contest/index.html
+++ b/F1 - March, 23/3rd_contest/index.html
@@ -56,8 +56,8 @@
         <div>division</div>section
         <section>section</section>division
         <pre>preserve
-            according    to us 
-            as I w       a       n       t 
+            line     sapce, 
+                indentation    &     break 
         </pre>
         <a href="phone:9452232937">call me</a> <br>
         <a href="mailto:kfatnuragiv@gmail.com">mail me</a>
