--- a/F1 - March, 23/3rd_contest/index.html
+++ b/F1 - March, 23/3rd_contest/index.html
@@ -61,6 +61,12 @@
         </pre>
         <a href="phone:9452232937">call me</a> <br>
         <a href="mailto:kfatnuragiv@gmail.com">mail me</a>
+        -------------------------------------------------------------------
+        <!-- ---------------------------------------------------------- -->
+
+        <h2>Custom attributes</h2>
+        <li data-name="NAME"></li>
+        <li data-role="ROLE"></li>
     </main><br>
     -----------------------------------------------------------------------
     <br> <br>
