--- a/F1 - March, 23/3rd_contest/index.html
+++ b/F1 - March, 23/3rd_contest/index.html
@@ -16,8 +16,7 @@
 
     <main>
         <h2>List</h2>
-        <h4>Ordered List</h4>
-        <ol type="A" reversed start="3">
+        <ol type="A" reversed start="3"><h4>Ordered List</h4>
             <li></li>
             <li></li>
         </ol>
@@ -60,7 +59,7 @@
                 indentation    &     break 
         </pre>
         <a href="phone:9452232937">call me</a> <br>
-        <a href="mailto:kfatnuragiv@gmail.com">mail me</a>
+        <a href="mailto:kfatnuragiv@gmail.com">mail me</a><br>
         -------------------------------------------------------------------
         <!-- ---------------------------------------------------------- -->
 
@@ -72,8 +71,8 @@
     <br> <br>
     <!-- -------------------------------------------------------------- -->
 
-    <footer><center>
-        &copy; Copyright
+    <footer>
+        <center>&copy; Copyright
         <h3><u>END</u></h3></center>
     </footer>
 </body>
