--- a/F1 - March, 23/4th_class/index.html
+++ b/F1 - March, 23/4th_class/index.html
@@ -22,16 +22,16 @@
                 <th>Sr</th>
                 <th bgcolor="green">Name</th>
             </tr>
-------------------------
-            <th bgcolor="orange">1st cell for th
-                <td>Sr hhh</td> 
-                <td bgcolor="white">Name</td> 
+<!--  -->
+            <th bgcolor="orange">1st cell for th i.e., default
+                <td>hhh</td> 
+                <td bgcolor="white">Name</td>
             </th>
-------------
+<!--  -->
             <th>Sr</th>
-            <th>Name</th>
+            <td><th>Address</th></td>
             <th>Roll</th>
--------------------------
+<!-- ------------- -->
             <tr>
                 <td>1</td>
                 <td>Koshal</td>
