on 2nd revision

--- a/F1 - March, 23/2nd_class/index.html
+++ b/F1 - March, 23/2nd_class/index.html
@@ -6,60 +6,75 @@
     <title>2ND NOTES</title>
 </head>
 <body>
-    <h1><b><u><center>sitaram</center></u></b></h1>
-    <h1><b><u><center>2ND NOTES</center></u></b></h1>
-
-    <h2>Relative Path</h2>
-    <img src="../../F1 - March, 23/1st_class/1.jpg" alt="move upward" height="150" width="150">
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <img src=".././././5.jpg" alt="stay in current"height="150" width="150"> <br>
+    <header>
+        <nav><h1><b><u><center>sitaram</center></u></b></h1></nav>
+        <nav><h1><b><u><center>2ND NOTES</center></u></b></h1></nav>
+    </header>
     -----------------------------------------------------------------------
     <br> 
     <!-- -------------------------------------------------------------- -->
 
-    <h2>Adding Video</h2>
-    <video src="./v1.mp4" controls autoplay loop muted height="200"></video><br>
+    <main>
+        <h2>Relative Path</h2>
+        <section>
+            <img src="../../F1 - March, 23/1st_class/1.jpg" alt="move upward" height="150" width="150">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src=".././././5.jpg" alt="stay in current" height="150" width="150"> <br>
+        </section>
+        --------------------------------------------------------------
+        <!-- ---------------------------------------------------------- -->
+
+        <h2>Adding Video</h2>
+        <section>
+            <video src="./v1.mp4" controls autoplay loop muted height="200"></video><br>
+        </section>
+        --------------------------------------------------------------
+        <!-- ---------------------------------------------------------- -->
+
+        <h2>Adding Audio</h2>
+        <section>
+            <audio src="./a1.mp3" controls autoplay loop muted></audio>
+            <audio src="./a2.ogg" controls autoplay loop muted></audio>
+            <!-- ------------------------------- -->
+            <audio controls autoplay muted>
+                <source src="./a1.mp3" type="audio/mpeg">
+            </audio>
+            <audio controls autoplay muted>
+                <source src="" type="audio/">
+                <source src="" type="audio/">
+                aa gaya samajh me
+            </audio><br>
+        </section>
+        --------------------------------------------------------------
+        <!-- ---------------------------------------------------------- -->
+
+        <h2>Adding Iframe</h2>
+        <section>
+            <iframe src="../1st_class/index.html" frameborder="0" width="25%" height="200"></iframe> <br>
+            -----------------------------------------------------
+            <h3>Trying Loop</h3>
+            <iframe src="./index.html" frameborder="-11" width="50%" height="200"></iframe> <br>
+            -----------------------------------------------------
+            <h3>Inside of Frame</h3>
+            <iframe src="./ind.html" frameborder="-11" width="75%" height="300"></iframe><br>
+        </section>
+        --------------------------------------------------------------
+        <!-- ---------------------------------------------------------- -->
+
+        <h2>Adding Youtube</h2>
+        <section>
+            <iframe src="https://www.youtube.com/embed/qtKD5BkHhDU?si=FINmcesEsUhv2oxp" frameborder="1" width="45%"></iframe> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <iframe src="https://www.youtube.com/embed/qtKD5BkHhDU" frameborder="1" width="45%"></iframe> <br> <br>
+            <a href="https://youtu.be/JSLHveDmdjY?si=DYgqJzrueWBbHDSb">Youtube direct link</a><br>
+        </section>    
+    </main>
     -----------------------------------------------------------------------
-    <br> 
+    <br>
     <!-- -------------------------------------------------------------- -->
 
-    <h2>Adding Audio</h2>
-    <audio src="./a1.mp3" controls autoplay loop muted></audio>
-    <audio src="./a2.ogg" controls autoplay loop muted></audio>
-    <!-- ------------------------------- -->
-    <audio controls autoplay muted>
-        <source src="./a1.mp3" type="audio/mpeg">
-    </audio>
-    <audio controls autoplay muted>
-        <source src="" type="audio/">
-        <source src="" type="audio/">
-        aa gaya samajh me
-    </audio><br>
-    -----------------------------------------------------------------------
-    <br> 
-    <!-- -------------------------------------------------------------- -->
-
-    <h2>Adding Iframe</h2>
-    <iframe src="../1st_class/index.html" frameborder="0" width="400" height="200"></iframe> <br>
-    ---------------------------------------------------
-    <h2>Trying Loop</h2>
-    <iframe src="./index.html" frameborder="-11" width="400" height="200"></iframe> <br>
-    ---------------------------------------------------
-    <h2>Inside of Frame</h2>
-    <iframe src="./ind.html" frameborder="-11" width="800" height="300"></iframe><br>
-    -----------------------------------------------------------------------
-    <br> 
-    <!-- -------------------------------------------------------------- -->
-
-    <h2>Adding Youtube</h2>
-    <iframe src="https://www.youtube.com/embed/qtKD5BkHhDU?si=FINmcesEsUhv2oxp" frameborder="1"></iframe> 
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <iframe src="https://www.youtube.com/embed/qtKD5BkHhDU" frameborder="1"></iframe> <br> <br>
-    <a href="https://youtu.be/JSLHveDmdjY?si=DYgqJzrueWBbHDSb">Youtube direct link</a><br>
-    -----------------------------------------------------------------------
-    <br> <br>
-    <!-- -------------------------------------------------------------- -->
-
-    <center><h3><u>END</u></h3></center>
+    <footer>
+        <center><h3><u>END</u></h3></center>
+    </footer>
 </body>
 </html>
