--- a/F1 - March, 23/2nd_class/i.html
+++ b/F1 - March, 23/2nd_class/i.html
@@ -6,24 +6,34 @@
     <title>Child</title>
 </head>
 <body>
-    <h1><b><u><center>sitaram</center></u></b></h1>
-    <h1><center><u>GRANDCHILD OF INDEX</u></center></h1>
-
-    <h2>Welcome to i.html page</h2>
-    <a href="https://www.acciojob.com" target="_self">target="_self" or say default</a> <br>
-    <a href="https://www.acciojob.com" target="_parent">target="_parent"</a> <br>
-    <a href="https://www.acciojob.com" target="_blank">target="_blank"</a> <br>
-    <a href="https://www.acciojob.com" target="_top">target="_top"</a> <br>
+    <header>
+        <nav><h1><b><u><center>sitaram</center></u></b></h1></nav>
+        <nav><h1><center><u>GRANDCHILD OF INDEX</u></center></h1></nav>
+    </header>
     -----------------------------------------------------------------------
-    <br> <br>
     <!-- -------------------------------------------------------------- -->
 
-    <h2>Try Loop Again</h2>
-    <iframe src="index.html" frameborder="1" width="400" height="300"></iframe><br>
+    <main>
+        <h2>Welcome to i.html page</h2>
+        <section>
+            <a href="https://www.acciojob.com" target="_self">"_self" or say default</a> <br>
+            <a href="https://www.acciojob.com" target="_parent">"_parent"</a> <br>
+            <a href="https://www.acciojob.com" target="_blank">"_blank"</a> <br>
+            <a href="https://www.acciojob.com" target="_top">"_top"</a> <br>
+        </section>
+        ---------------------------------------------------------
+        <!-- ---------------------------------------------------------- -->
+
+        <h2>Try Loop Again</h2>
+        <section>
+            <iframe src="index.html" frameborder="1" width="50%" height="300"></iframe><br>
+        </section>
+    </main>
     -----------------------------------------------------------------------
-    <br> <br>
     <!-- -------------------------------------------------------------- -->
 
-    <center><h3><u>END</u></h3></center>
+    <footer>
+        <center><h3><u>END</u></h3></center>
+    </footer>
 </body>
 </html>
