--- a/F1 - March, 23/2nd_class/ind.html
+++ b/F1 - March, 23/2nd_class/ind.html
@@ -6,23 +6,34 @@
     <title>IFrame</title>
 </head>
 <body>
-    <h1><b><u><center>sitaram</center></u></b></h1>
-    <h1><center><u>CHILD OF INDEX</u></center></h1>
-
-    <h2>Welcome to ind.html page</h2>
-    <a href="https://www.acciojob.com" target="_self">target="_self" or say default</a> <br>
-    <a href="https://www.acciojob.com" target="_parent">target="_parent"</a> <br>
-    <a href="https://www.acciojob.com" target="_blank">target="_blank"</a> <br>
+    <header>
+        <nav><h1><b><u><center>sitaram</center></u></b></h1></nav>
+        <nav><h1><center><u>CHILD OF INDEX</u></center></h1></nav>
+    </header>
     -----------------------------------------------------------------------
-    <br> <br>
     <!-- -------------------------------------------------------------- -->
 
-    <h2>For target="_top"</h2>
-    <iframe src="i.html" frameborder="1" width="600" height="300"></iframe><br>
+    <main>
+        <h2>Welcome to ind.html page</h2>
+        <sec>
+            <a href="https://www.acciojob.com" target="_self">target="_self" or say default</a> <br>
+            <a href="https://www.acciojob.com" target="_parent">target="_parent"</a> <br>
+            <a href="https://www.acciojob.com" target="_blank">target="_blank"</a> <br>
+        </sec>
+        --------------------------------------------------------------
+        <br> <br>
+        <!-- ---------------------------------------------------------- -->
+        
+        <h2>For target="_top"</h2>
+        <sec>
+            <iframe src="i.html" frameborder="1" width="80%" height="300"></iframe><br>
+        </sec>
+    </main>
     -----------------------------------------------------------------------
-    <br> <br>
     <!-- -------------------------------------------------------------- -->
 
-    <center><h3><u>END</u></h3></center>
+    <footer>
+        <center><h3><u>END</u></h3></center>
+    </footer>
 </body>
 </html>
