on 3rd revision

--- a/F1 - March, 23/3rd_contest/index.html
+++ b/F1 - March, 23/3rd_contest/index.html
@@ -7,68 +7,89 @@
 </head>
 <body>
     <header>
-        <h1><b><u><center>sitaram</center></u></b></h1>
-        <h1><b><u><center>3RD NOTES</center></u></b></h1>
+        <nav><h1><b><u><center>sitaram</center></u></b></h1></nav>
+        <nav><h1><b><u><center>3RD NOTES</center></u></b></h1></nav>
     </header>
     -----------------------------------------------------------------------
-    <br>
     <!-- -------------------------------------------------------------- -->
 
     <main>
         <h2>List</h2>
-        <ol type="A" reversed start="3"><h4>Ordered List</h4>
-            <li></li>
-            <li></li>
-        </ol>
-        -----------------------------------------------
-        <!-- ---------------------------------------------------------- -->
-
-        <ul><h4>Unordered List</h4>
-            <li><ul type="circle">
+        <section>
+            <ol type="A" reversed start="3">
+                <h4>Ordered List</h4>
                 <li></li>
                 <li></li>
-            </ul></li>
-            <li><ul type="none">
-                <li>none</li>
-                <li>points</li>
-            </ul></li>
-        </ul>
-        -----------------------------------------------
-        <!-- ---------------------------------------------------------- -->
-
-        <dl><h4>Description List</h4>
-            <dt>Topic</dt>
-            <dd>We all need to define the topic</dd>
-        </dl>
+            </ol>
+            -----------------------------------------------
+            <!-- ------------------------------------------------------ -->
+    
+            <ul>
+                <h4>Unordered List</h4>
+                <li>
+                    <ul type="circle">
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul type="none">
+                        <li>none</li>
+                        <li>points</li>
+                    </ul>
+                </li>
+            </ul>
+            -----------------------------------------------
+            <!-- ------------------------------------------------------ -->
+    
+            <dl>
+                <h4>Description List</h4>
+                <dt>Topic</dt>
+                <dd>We all need to define the topic</dd>
+            </dl>
+        </section>     
         -------------------------------------------------------------------
         <!-- ---------------------------------------------------------- -->
 
         <h2>Blockquote</h2>
-        <blockquote cite="https://google.com">
-            <li>It is under the list.</li>
-            <p>Now it is in para</p>
-        </blockquote>
-        <p>That is the difference between the para and the blockquote</p>
+        <section>
+            <blockquote cite="https://google.com">
+                <li>It is under the list.</li>
+                <p>Now it is in para</p>
+            </blockquote>
+            <p>
+                That is the difference between the &lt; p &gt; and the &lt; blockquote &gt;.
+            </p>
+        </section>       
         -------------------------------------------------------------------
         <!-- ---------------------------------------------------------- -->
 
-        <div>division</div>section
-        <section>section</section>division
-        <pre>preserve
-            line     sapce, 
-                indentation    &     break 
-        </pre>
-        <a href="phone:9452232937">call me</a> <br>
-        <a href="mailto:kfatnuragiv@gmail.com">mail me</a><br>
-        -------------------------------------------------------------------
-        <!-- ---------------------------------------------------------- -->
+        <h2>From MCQs</h2>
+        <section>
+            <div>divi</div>sion
+            <section>sec</section>tion <br>
+            -----------------------------------------------
+            <!-- ------------------------------------------------------ -->
 
-        <h2>Custom attributes</h2>
-        <li data-name="NAME"></li>
-        <li data-role="ROLE"></li>
-    </main><br>
+            <pre><h4>preserve</h4>line
+                 sapce, 
+                     indentation    &     break 
+            </pre>
+            -----------------------------------------------
+            <br>
+            <!-- ------------------------------------------------------ -->
+
+            <a href="phone:9452232937">call me</a> <br>
+            <a href="mailto:kfatnuragiv@gmail.com">mail me</a><br>
+            -----------------------------------------------
+            <!-- ------------------------------------------------------ -->
+
+            <h4>Custom attributes</h4>
+            <li data-name="NAME">&lt; li data-name="NAME" &gt;</li>
+            <li data-role="ROLE">have no effect in output</li>
+        </section>       
+    </main>
     -----------------------------------------------------------------------
-    <br> <br>
     <!-- -------------------------------------------------------------- -->
 
     <footer>
