--- a/F1 - March, 23/3rd_contest/project_s.html
+++ b/F1 - March, 23/3rd_contest/project_s.html
@@ -20,15 +20,19 @@
     <!-- -------------------------------------------------------------- -->
 
     <main>
+        <h2>About Me</h2>
         <section>
-            <h2>About Me</h2>
-            <p>Hi, I'm Anurag Tiwari. I'm a full stack developer with having project experience on frontend & backend projects.</p>
-            <p>I have command on Java, Python & .net technical fiels which accelerate and enhance my skills and diversity to work on any projects. Also have knowledge of React and database development skills which play an important role in IT sector.</p>
+            <p>
+                Hi, I'm Anurag Tiwari. I'm a full stack developer with having project experience on frontend & backend projects.
+            </p>
+            <p>
+                I have command on Java, Python & .net technical fiels which accelerate and enhance my skills and diversity to work on any projects. Also have knowledge of React and database development skills which play an important role in IT sector.
+            </p>
         </section>
         <!-- --------------------------------------- -->
 
-        <section>
-            <h2>My Work</h2>
+        <h2>My Work</h2>
+        <section>   
             <ol>
                 <li><a href="#">E-commerce using .net under MassTech</a></li>
                 <li><a href="#">Airline Reservation System using Java & SQL under Acciojob</a></li>
@@ -39,8 +43,8 @@
         </section>
         <!-- ---------------------------------------- -->
 
-        <section>
-            <h2>Testimonials</h2>
+        <h2>Testimonials</h2>
+        <section>    
             <blockquote cite="https://acclaim.com/quotes">
                 "Anurag have good command on frontend skills."
             </blockquote>
@@ -54,8 +58,8 @@
         </section>
         <!-- ---------------------------------------- -->
 
+        <h2>Pricing</h2>
         <section>
-            <h2>Pricing</h2>
             <ul>
                 <li>
                     <h3>Basic Plan</h3>
