--- a/F1 - March, 23/4th_class/index.html
+++ b/F1 - March, 23/4th_class/index.html
@@ -15,85 +15,98 @@
     <!-- -------------------------------------------------------------- -->
 
     <main>
+        <h2>Tables</h2>
         <section>
-            <div>
-                <h2>Tables</h2>
-                <li>without &lt; tr &gt; it will not got to next row i.e., both &lt; th &gt; and &lt; td &gt; stay at 1st row</li>
-                <table border="2" bgcolor="yellow" width="100%">
+            <div>      
+                <li>
+                    without &lt; tr &gt; it will not go to next row i.e., both &lt; th &gt; and &lt; td &gt; stay at 1st row
+                </li>
+                <li>
+                    &lt; table height="40" &gt; not work bcz &lt; th height="50"&gt;
+                </li>
+                <li>negative height give default size</li>
+                <table border="-5" bgcolor="yellow" width="100%" height="40">
                     <!-- without <tr> it will not go to next row i.e., both <th> and <td> stay at 1st row -->
                     <th>1.1.1: only th in 1st row</th>
-                    <th bgcolor="red"></th>
-                    <th bgcolor="red"></th>
+                    <th bgcolor="red" width="100"></th>
+                    <th bgcolor="red" height="50"></th>
 
                     <td>1.1.1: only td in 1st row</td>
-                    <td bgcolor="orange"></td>
-                    <td bgcolor="orange"></td>
+                    <td bgcolor="orange" width="20%"></td>
+                    <td bgcolor="orange" height="-20"></td>
                 </table>
-                -----------------------------------------------------------
+                -------------------------------------------------
                 <br><br>
                 <!-- -------------------------------------------------- -->
 
                 <li>&lt; th &gt; inside the &lt; tr &gt;</li>
                 <li>&lt; td &gt; inside the &lt; tr &gt;</li>
-                <table border="2" bgcolor="yellow" width="100%">
+                <table border="0" bgcolor="yellow" width="100%">
                     <!-- <th> inside the <tr> -->
-                    <tr bgcolor="red">
-                        <th>2.1.1: th in tr</th>
+                    <tr bgcolor="red" height="50" width="100">
+                        <th height="50">2.1.1: th in tr</th>
                         <th bgcolor="white">2.1.2: th in tr</th>
                         <th>2.1.3: th in tr</th>
                     </tr>
                     <!-- ---------- -->
 
                     <!-- <td> inside the <tr> -->
-                    <tr bgcolor="orange">
+                    <tr bgcolor="orange" width="100">
                         <td>2.2.1: td in tr</td>
                         <td>2.2.2: td in tr</td>
                     </tr>
                     <tr bgcolor="orange">
                         <td>2.3.1: td in tr</td>
                         <td>2.3.2: td in tr</td>
-                        <td bgcolor="green">2.3.3: td in tr</td>
+                        <td bgcolor="silver">2.3.3: td in tr</td>
                         <td>2.3.4: td in tr</td>
                     </tr>
                 </table>
-                -----------------------------------------------------------
+                -------------------------------------------------
                 <br><br>
                 <!-- -------------------------------------------------- -->
 
                 <li>&lt; td &gt; inside &lt; th &gt; stay at 1st row</li>
-                <table border="2" bgcolor="yellow" width="100%">
+                <table border="5" bgcolor="yellow" width="100%">
                     <!-- <td> inside <th> stay at 1st row -->
                     <th bgcolor="red">
-                        3.1.: before td
-                        <td bgcolor="green">3.1.1: td inside th</td>
-                        3.1.: mid of td <br>
-                        <td bgcolor="green">3.1.2: td inside th</td>
-                        3.1.: after td
+                        3.1.: before &lt; td &gt;
+                        <td bgcolor="silver">
+                            3.1.1: &lt; td &gt; inside &lt; th &gt;
+                        </td>
+                        3.1.: mid of &lt; td &gt; <br>
+                        <td bgcolor="silver">
+                            3.1.2: &lt; td &gt; inside &lt; th &gt;
+                        </td>
+                        3.1.: after &lt; td &gt;
                     </th>
                 </table>
-                -----------------------------------------------------------
+                -------------------------------------------------
                 <br><br>
                 <!-- -------------------------------------------------- -->
 
                 <li>&lt; th &gt; inside &lt; td &gt; stay at 1st row</li>
                 <table border="2" bgcolor="yellow" width="100%">
                     <!-- <th> inside <td> stay at 1st row -->
-                    <td bgcolor="green">
-                        4.1.: before th
-                        <th bgcolor="red">4.1.1: th inside td</th>
-                        4.1.: mid of th <br>
-                        <th bgcolor="red">4.1.2: th inside td</th>
-                        4.1.: after th
+                    <td bgcolor="silver">
+                        4.1.: before &lt; th &gt;
+                        <th bgcolor="red">
+                            4.1.1: &lt; th &gt; inside &lt; td &gt;
+                        </th>
+                        4.1.: mid of &lt; th &gt; <br>
+                        <th bgcolor="red">
+                            4.1.2: &lt; th &gt; inside &lt; td &gt;
+                        </th>
+                        4.1.: after &lt; th &gt;
                     </td>
                 </table>
             </div>
         </section>
-        -------------------------------------------------------------------
-        <br><br>
+        --------------------------------------------------------------
         <!-- ---------------------------------------------------------- -->
          
-        <section>
-            <h2>Strong + em || b + i</h2>
+        <h2>Strong + em || b + i</h2>
+        <section>           
             <div>
                 <strong>Anurag</strong>
                 <em>Tiwari</em>
@@ -104,15 +117,10 @@
                 <i>Tiwari</i>
             </div>
         </section>
-        -------------------------------------------------------------------
-        <br>
-        <!-- ---------------------------------------------------------- -->
-        
     </main><br>
     -----------------------------------------------------------------------
-    <br><br>
     <!-- -------------------------------------------------------------- -->
-
+<!-- TODO; -->
     <footer>
         <center>&copy; Copyright
         <h3><u>END</u></h3></center>
