--- a/F1 - March, 23/4th_class/index.html
+++ b/F1 - March, 23/4th_class/index.html
@@ -11,13 +11,12 @@
         <nav><h1><b><u><center>4TH NOTES</center></u></b></h1></nav>
     </header>
     -----------------------------------------------------------------------
-    <br>
     <!-- -------------------------------------------------------------- -->
 
     <main>
         <h2>Tables</h2>
         <section>
-            <div>      
+            <div>
                 <li>
                     without &lt; tr &gt; it will not go to next row i.e., both &lt; th &gt; and &lt; td &gt; stay at 1st row
                 </li>
@@ -25,11 +24,13 @@
                     &lt; table height="40" &gt; not work bcz &lt; th height="50"&gt;
                 </li>
                 <li>negative height give default size</li>
-                <table border="-5" bgcolor="yellow" width="100%" height="40">
+                <br>
+                <!-- ---------- -->
+                <table border="-5" bgcolor="yellow" width="100%" height="15">
                     <!-- without <tr> it will not go to next row i.e., both <th> and <td> stay at 1st row -->
                     <th>1.1.1: only th in 1st row</th>
-                    <th bgcolor="red" width="100"></th>
-                    <th bgcolor="red" height="50"></th>
+                    <th bgcolor="red" width="0"></th>
+                    <th bgcolor="red" height="20"></th>
 
                     <td>1.1.1: only td in 1st row</td>
                     <td bgcolor="orange" width="20%"></td>
@@ -37,24 +38,31 @@
                 </table>
                 -------------------------------------------------
                 <br><br>
-                <!-- -------------------------------------------------- -->
+            </div>
+            <!-- ------------------------------------------------------ -->
 
+            <div>
                 <li>&lt; th &gt; inside the &lt; tr &gt;</li>
                 <li>&lt; td &gt; inside the &lt; tr &gt;</li>
-                <table border="0" bgcolor="yellow" width="100%">
+                <li>&lt; table height="" &gt; work for all the row</li>
+                <li>&lt; tr width=""&gt; not work</li>
+                <li>max &lt; height="" &gt; work on entire row</li>
+                <br>
+                <!-- ---------- -->
+                <table border="0" bgcolor="yellow" width="100%" height="20">
                     <!-- <th> inside the <tr> -->
-                    <tr bgcolor="red" height="50" width="100">
-                        <th height="50">2.1.1: th in tr</th>
+                    <tr bgcolor="red" height="35" width="">
+                        <th height="45">2.1.1: th in tr</th>
                         <th bgcolor="white">2.1.2: th in tr</th>
                         <th>2.1.3: th in tr</th>
                     </tr>
-                    <!-- ---------- -->
 
                     <!-- <td> inside the <tr> -->
-                    <tr bgcolor="orange" width="100">
+                    <tr bgcolor="orange" width="50">
                         <td>2.2.1: td in tr</td>
                         <td>2.2.2: td in tr</td>
                     </tr>
+                    <!-- ---------- -->
                     <tr bgcolor="orange">
                         <td>2.3.1: td in tr</td>
                         <td>2.3.2: td in tr</td>
@@ -64,9 +72,13 @@
                 </table>
                 -------------------------------------------------
                 <br><br>
-                <!-- -------------------------------------------------- -->
+            </div>           
+            <!-- ------------------------------------------------------ -->
 
+            <div>
                 <li>&lt; td &gt; inside &lt; th &gt; stay at 1st row</li>
+                <br>
+                <!-- ---------- -->
                 <table border="5" bgcolor="yellow" width="100%">
                     <!-- <td> inside <th> stay at 1st row -->
                     <th bgcolor="red">
@@ -83,9 +95,13 @@
                 </table>
                 -------------------------------------------------
                 <br><br>
-                <!-- -------------------------------------------------- -->
+            </div>            
+            <!-- ------------------------------------------------------ -->
 
+            <div>
                 <li>&lt; th &gt; inside &lt; td &gt; stay at 1st row</li>
+                <br>
+                <!-- ---------- -->
                 <table border="2" bgcolor="yellow" width="100%">
                     <!-- <th> inside <td> stay at 1st row -->
                     <td bgcolor="silver">
@@ -100,6 +116,26 @@
                         4.1.: after &lt; th &gt;
                     </td>
                 </table>
+                -------------------------------------------------
+                <br><br>
+            </div>
+            <!-- ------------------------------------------------------ -->
+
+            <div>
+                <li>
+                    &lt; table &gt; without border, i.e., default &lt; table &gt; don't have border so that it is not visible if we don't give value to cell
+                </li> <br>
+                <!-- ---------- -->
+                <table>
+                    <tr>
+                        <td>Apple</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Orange</td>
+                    </tr>
+                </table>                
             </div>
         </section>
         --------------------------------------------------------------
@@ -120,7 +156,7 @@
     </main><br>
     -----------------------------------------------------------------------
     <!-- -------------------------------------------------------------- -->
-<!-- TODO; -->
+
     <footer>
         <center>&copy; Copyright
         <h3><u>END</u></h3></center>
